<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movie">title_movie</string>
    <string name="rating">rating</string>
    <string name="detail">detail</string>
    <string name="language">language</string>
    <string name="title_tvShow">Tv Show</string>
    <string name="movie">Movie</string>
    <string name="Home">Home</string>
    <string name="date_release">Date Release</string>
    <string name="change_language_settings">Change Language</string>
    <string name="count">count</string>
    <string name="popularity">popularity</string>
    <string name="foto">foto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Favorite">Favorite</string>
    <string name="AddToFavorite">Add To Favorite</string>
    <string name="Delete">Delete</string>

    <string name="empty_data">No data available</string>
    <string name="success_add_favorite">Successfully add to favorite</string>
    <string name="failed__add_favorite">Failed add to favorite</string>
    <string name="success_delete_favorite">Successfully remove from favorite</string>
    <string name="failed__delete_favorite">Failed remove from favorite</string>
    <string name="favorite_is_exist">You have added this item to favorite</string>


</resources>
